src/snapshot_middleware/snapshots/librojo__snapshot_middleware__lua__test__module_with_meta.snap
---
source: src/snapshot_middleware/lua.rs
expression: instance_snapshot
---
snapshot_id: ~
metadata:
  ignore_unknown_instances: true
  instigating_source:
    Path: /foo.lua
  relevant_paths:
    - /foo.lua
    - /foo.meta.json
  context: {}
  debug_id: ~
name: foo
class_name: ModuleScript
properties:
  Source:
    String: Hello there!
children: []
ignore_children: false

