src/snapshot_middleware/snapshots/librojo__snapshot_middleware__lua__test__script_disabled.snap
---
source: src/snapshot_middleware/lua.rs
expression: instance_snapshot
---
snapshot_id: ~
metadata:
  ignore_unknown_instances: false
  instigating_source:
    Path: /bar.server.lua
  relevant_paths:
    - /bar.server.lua
    - /bar.meta.json
  context: {}
  debug_id: ~
name: bar
class_name: Script
properties:
  Disabled:
    Bool: true
  Source:
    String: Hello there!
children: []
ignore_children: false

